--- a/SiteWeb_ER.cbp
+++ b/SiteWeb_ER.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,23 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/AbstractCategory.h" />
+		<Unit filename="include/AgendaCategory.h" />
+		<Unit filename="include/Event.h" />
+		<Unit filename="include/ForumCategory.h" />
+		<Unit filename="include/Guest.h" />
+		<Unit filename="include/Member.h" />
+		<Unit filename="include/Subscription.h" />
+		<Unit filename="include/User.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/AbstractCategory.cpp" />
+		<Unit filename="src/AgendaCategory.cpp" />
+		<Unit filename="src/Event.cpp" />
+		<Unit filename="src/ForumCategory.cpp" />
+		<Unit filename="src/Guest.cpp" />
+		<Unit filename="src/Member.cpp" />
+		<Unit filename="src/Subscription.cpp" />
+		<Unit filename="src/User.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
